tests/negative/no_main.fc
// test: no-main-test
// compile-fail: true
// exit-code: 1

void exit(int _);

void glavnaya(){
    exit(0);
}